html code added minor css and README info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,9 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Goudy Bookletter 1911", sans-serif;
+}
+body {
+  background-color: rgb(226, 60, 143);
+  color: white;
 }
