--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,99 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Goudy Bookletter 1911", sans-serif;
+  /*font-family: "Goudy Bookletter 1911", sans-serif;*/
+  font-family: "Georgia";
 }
 body {
   background-color: rgb(226, 60, 143);
   color: white;
+}
+.header {
+  padding: 20px;
+  background-color: #373b3c;
+  color: #ffffff;
+}
+
+.header h1 {
+  display: inline-block;
+  font-size: 48px;
+}
+
+/* Lawrence header last name bolder text*/
+header h1 .last-name {
+  font-weight: bolder;
+}
+
+/* Values for unordered list in header */
+.header nav {
+  padding-top: 15px;
+  margin-right: 20px;
+  float: right;
+  font-size: 20px;
+}
+
+/* List-style-type: none removes any type of bullet icon from unordered list at top right */
+.header nav ul {
+  list-style-type: none; 
+}
+
+.header nav ul li {
+  display: inline-block;
+  margin-left: 45px;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.picture {
+  height: auto;
+  max-width: 100%; 
+  margin-bottom: -100px;*/
+  background-image: url("../images/pink-flowers-avatar.jpg");*/
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.subtitle {
+  float: right;
+  margin-left: 25px;
+  height: 290px;
+  width: 100%;
+}
+
+/*.container {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 100px;
+  background-color: #373b3c;
+  color: #ffffff;
+  padding: 20px;
+} */
+
+/* .container {
+  /* A flex-basis of 200px sets the starting width */
+  /* A flex-grow value of 1 allows the elements to evenly grow to fill the remaining space 
+  flex: 1 0 200px; 
+  padding: 10px;
+  text-align: right;
+  border-style: solid; 
+  border-width: 1px;
+  background-color: #373b3c;
+} */
+
+.container {
+  position: relative;
+  text-align: right;
+  color: white;
+}
+/*.bottom-right {
+  position: absolute;
+  bottom: 200px;
+  right: 20px; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-500%, -50%);
 }
