--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,11 +85,16 @@ a {
   background-color: #373b3c;
 } */
 
-.container {
+.bottom-right {
   position: relative;
-  text-align: right;
-  color: white;
+  /*text-align: right; 
+  color: white;*/
+  top: -50px;
+  right: -1050px;
+  font-weight: bolder;
 }
+/* How To Position Text Over an Image, n.d.).
+
 /*.bottom-right {
   position: absolute;
   bottom: 200px;
